# dapps-RMRK

./: .gitpod.yml  Cargo.toml  Makefile  README.md  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml  release.yml
base/: Cargo.toml
base/io/: Cargo.toml
base/src/: lib.rs
base/tests/: simple_base_test.rs
base_io/: all.html  enum.BaseAction.html  enum.BaseEvent.html  enum.EquippableList.html  enum.Part.html  index.html  sidebar-items.js  struct.BaseMetadata.html  struct.BaseState.html  struct.FixedPart.html  struct.InitBase.html  struct.SlotPart.html
catalog/: .metahash  Cargo.toml  build.rs  rmrk_catalog.meta.txt
catalog/io/: Cargo.toml
catalog/io/src/: lib.rs
catalog/src/: lib.rs
catalog/tests/: catalog.rs
implementors/gmeta/: trait.Metadata.js
implementors/scale_info/: trait.TypeInfo.js
resource/: Cargo.toml
resource/io/: Cargo.toml
resource/io/src/: lib.rs
resource/src/: lib.rs
resource_io/: all.html  enum.Resource.html  enum.ResourceAction.html  enum.ResourceEvent.html  index.html  sidebar-items.js  struct.BasicResource.html  struct.ComposedResource.html  struct.InitResource.html  struct.ResourceMetadata.html  struct.ResourceState.html  struct.SlotResource.html
rmrk/: all.html  index.html
rmrk-token/: .metahash  Cargo.toml  meta.txt  rmrk.meta.txt
rmrk-token/io/: Cargo.toml
rmrk-token/src/: burn.rs  checks.rs  children.rs  equippable.rs  lib.rs  messages.rs  mint.rs  multiresource.rs  transfer.rs  tx_manager.rs  utils.rs
rmrk-token/state/: Cargo.toml
rmrk-token/state/src/: lib.rs
rmrk-token/tests/: test.rs  utils.rs
rmrk_base/: all.html  index.html  sidebar-items.js  struct.Base.html
rmrk_io/: all.html  enum.ChildStatus.html  enum.RMRKAction.html  enum.RMRKEvent.html  index.html  sidebar-items.js  struct.InitRMRK.html  struct.MultiResourceState.html  struct.RMRKMetadata.html  struct.RMRKOwner.html  struct.RMRKState.html
rmrk_resource/: all.html  index.html
src/base_io/: lib.rs.html
src/resource_io/: lib.rs.html
src/rmrk/: burn.rs.html  checks.rs.html  children.rs.html  equippable.rs.html  lib.rs.html  messages.rs.html  mint.rs.html  multiresource.rs.html  transfer.rs.html  utils.rs.html
src/rmrk_base/: lib.rs.html
types/: Cargo.toml  all.html  index.html
(+48 files in other folders)
