[package]
name = "rmrk-state"
version = "0.1.6"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "dn-reply-provision" }
gmeta = { git = "https://github.com/gear-tech/gear", branch = "dn-reply-provision", features = ["codegen"] }
primitive-types = { version = "0.12.1", default-features = false, features = ["scale-info"] }
scale-info = { version = "2", default-features = false }
rmrk-io = { path = "../io" }
types = { path = "../../types/" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", branch = "dn-reply-provision", features = ["metawasm"] }

[features]
default = ["binary-vendor"]
binary-vendor = []